last changes before editing template

--- a/defense.qmd
+++ b/defense.qmd
@@ -1,73 +1,9 @@
 ---
 title: "Migration, Urbanicity, and Health: Mutually reinforcing contextual and compositional place-based determinants of health"
+author: "Hannah Olson-Williams"
+subtitle: "Department of Population Health Sciences"
 format: revealjs
 ---
-
-## Introduction
-
-::: incremental
--   Place-based health can be categorized as:
-    -   **Contextual factors**: Structural characteristics (greenspace, healthcare access).
-    -   **Compositional factors**: Attributes of individuals (demographics, health behaviors).
--   Context and composition are mutually reinforcing (e.g., built environment influencing behaviors).
--   Both affect and are influenced by migration patterns. VENN DIAGRAM HERE??
--   Typical measures of place often ignore the dynamic influence of migration
--   Typical studies of migration often examine individual-level effects instead of place-level impacts
-:::
-
-## Contextual Factors
-
-::: incremental
--   Defined by structural and environmental characteristics.
--   Key elements:
-    -   **Socioeconomic conditions** (e.g., poverty, unemployment, education).
-    -   **Physical environment** (e.g., air quality, green spaces).
-    -   **Social infrastructure** (e.g., community organizations, access to healthcare).
--   Influence health outcomes and contribute to disparities.
-:::
-
-## Compositional Factors
-
-::: incremental
--   Defined by characteristics of individuals in a place.
--   Key elements:
-    -   **Demographics** (age, gender, race).
-    -   **Socioeconomic status (SES)** (income, education).
-    -   **Health behaviors** (diet, physical activity).
--   Influenced by contextual factors (e.g., access to resources).
-:::
-
-## Urbanicity
-
-::: incremental
--   Defined by population density and proximity to urban centers.
--   Both a contextual and compositional factor.
--   Dual hypotheses:
-    -   **Urban Health Penalty**: Negative effects (e.g., pollution, stress).
-    -   **Urban Advantage**: Positive effects (e.g., access to resources, opportunities).
--   Affects migration patterns and health outcomes.
-:::
-
-## Urbanicity
-
-[![AP News 2024 Presidential Election: Voting patterns by urbanicity](images/ap_ruralurb_voting.png)](https://apnews.com/article/election-harris-trump-women-latinos-black-voters-0f3fbda3362f3dcfe41aa6b858f22d12?user_email=f8ef567ea5a90de665637559d7561d9c75f6485b723e674e2f861e74186bbad6&utm_medium=Afternoon_Wire&utm_source=Sailthru_AP&utm_campaign=AfternoonWire_Nov7_2024&utm_term=Afternoon%20Wire)
-
-## Migration as a Cause and Effect
-
-::: incremental
--   **Cause**: Reshapes demographic and socioeconomic composition.
--   **Effect**: Driven by push/pull factors (e.g., job opportunities, environmental quality)
-:::
-
-## Implications:
-
-::: incremental
--   Migration is often a driver of urbanicity-related inequalities
-
--   Urbanicity-related inequalities are related to climate susceptibility
-
--   Urbanicity-related inequalities are related to political realities
-:::
 
 ## Aims:
 
@@ -77,9 +13,71 @@ format: revealjs
 3.  Identify how a county's position within a migration system may be related to county-level health
 :::
 
+## Mutually reinforcing processes that define the health of a place
+
+![](images/mutuallyreinforcing.PNG){fig-align="center"}
+
+## Mutually reinforcing processes that define the health of a place
+
+![](images/mutuallyreinforcing_desc.PNG){fig-align="center"}
+
+## Motivation:
+
+### Migration influenced by context 
+
+![](images/hamakoae.JPG){fig-align="center"}
+
+::: notes
+In Lesotho, 43 percent of households report that at least one family member lives away - according to the DHS 2014 survey [@botea]
+
+Anecdotally:
+
+-   host sister: boarding school in nation's capital; host father: diamond mine in SA
+
+-   school principal: commutes to ha makoae during the week and home to family in district capital on weekend; son: boarding school in SA
+
+-   students: families live in further remote areas than Ha Makoae so they live on their own in Ha Makoae in order to attend secondary school
+:::
+
+## Motivation:
+
+### Contextual and Compositional Measures of Health
+
+![](images/CHRR%20Logo.jpg){fig-align="center"}
+
+## Motivation:
+
+### Urbanicity influencing future context 
+
+![](images/ap_ruralurb_voting.png){fig-align="center"}
+
+## Motivation: 
+
+### Looking forward 
+
+-   **Inequality**
+
+    -   Rural-urban divides account for approximately 40% of within country inequality [@young2013]
+
+    -   Growth of urban populations is associated with greater rural-urban gaps in health outcomes [@beatriz2018]
+
+-   **Climate change**
+
+    -   Climate-induced migration could result in up to 300% increase in population density [@hsiang2016]
+
+    -   Urbanicity-related inequalities are related to climate susceptibility [@fong2020]
+
+## Goals:
+
+::: incremental
+-   Place-based determinants of health are often static and do not account for migration / movement of people
+
+-   Assessments of the impact of migration on health often examine individual-level effects
+:::
+
 ## Aim 1: Hypotheses
 
-Quantify the associations between place and self-reported mental health at the county level
+*Quantify the associations between place and self-reported mental health at the county level*
 
 ::: incremental
 -   Hypothesis 1A: County-level averages in poor mental health days are related to urbanicity after accounting for county-level demographic differences
@@ -125,7 +123,7 @@ All data come from the County Health Rankings and Roadmaps 2021 dataset
     -   We used a mixed effects linear regression model with random effect for state (with inverse probability weights)
 :::
 
-## Aim 1: Hypothesis 2A Approach
+## Aim 1: Hypothesis 1B Approach
 
 *The relationship between urbanicity and mental health can be explained by differences in factors linked to the built environment*
 
@@ -133,7 +131,7 @@ We investigated 8 potential mediating factors:
 
 ![](aim1_images/table6.png)
 
-## Aim 1: Hypothesis 2A Approach
+## Aim 1: Hypothesis 1B Approach
 
 *The relationship between urbanicity and mental health can be explained by differences in factors linked to the built environment*
 
@@ -162,7 +160,7 @@ Mediation analysis in two steps (CITE)
 ::: incremental
 -   BRFSS data is modeled at the state level
 
--   We are using race and ethnicity as proxies for lived experiences that may differ by identity due to systemic injustices CITE
+-   We are using race and ethnicity as proxies for lived experiences that may differ by identity due to systemic injustices
 
 -   Model dependent
 
@@ -185,6 +183,396 @@ Explore how county-level migration can enhance our capacity to understand and ex
 -   **Hypothesis 2C:** Taking into account unmeasured factors in county-to-county migration flows improves our ability to explain county-level health outcomes as well as the differential role that migration plays in urban versus rural counties
 :::
 
+## Aim 2: Variables
+
+**Outcome:** $y_{it}$
+
+County-level age-adjusted premature mortality rate per 100,000 population of county $i$ at time $t$
+
+::: notes
+Premature mortality is death before age 75.
+:::
+
+## Aim 2: Variables
+
+**Baseline explanatory factor:** $y_{i,t-1}$
+
+Lagged county-level age-adjusted premature mortality rate of county $i$ at time $t-1$ (i.e. the prior year)
+
+## Aim 2: Variables
+
+**Primary explanatory factor:** $mig_{it}$
+
+Weighted average accounting for compositional change in a destination county $i$ at time $t$
+
+$$ mig_{it} = \frac{ \sum_{j\ne i} out_{jit} y_{j,t-1} + y_{i,t-1} (pop_{i, t-1} - \sum_{j\ne i} out_{ijt})}{ \sum_{j\ne i} out_{jit} + (pop_{i,t-1} - \sum_{j\ne i} out_{ijt})} $$
+
+::: incremental
+-   $out_{jit}$ represents the number of individuals from county $j$ who moved to a destination county $i$ between year $t-1$ and year $t$
+
+-   $y_{j, t-1}$ is the lagged premature age-adjusted mortality rate of origin county $j$
+
+-   $pop_{i,t-1}$ is the population under age 75 of county $i$ in the prior year $t-1$
+:::
+
+## Aim 2: Variables
+
+**Secondary explanatory factor:** $U_i$
+
+Urbanicity as defined by the NCHS (same as Aim 1), grouped into urban and rural for each county $i$
+
+1948 rural counties
+
+1159 urban counties
+
+## Aim 2: Variables
+
+**Exploratory explanatory factor:** $amig_{it}$
+
+Adjusted weighted average migration term for county $i$ in year $t$
+
+$d_{ij}$ accounts for health-related selection of migrants to county $i$ from county $j$
+
+$$  amig_{it} = \frac{ \sum_{j\ne i} out_{jit} ( y_{j,t-1} + d_{ij}) + y_{i,t-1} (pop_{i, t-1} - \sum_{j\ne i} out_{ijt})}{ \sum_{j\ne i} out_{jit} + (pop_{i,t-1} - \sum_{j\ne i} out_{ijt})}$$
+
+::: incremental
+-   When $d_{ij} > 0$, county $i$ tends to attract less healthy individuals
+
+-   When $d_{ij} < 0$ county $i$ tends to attract healthier individuals
+:::
+
+::: notes
+dij = kij - li
+
+where kij is specific to origin and li is specific to destination ASK AMY ABOUT THIS!!!
+
+therefore dij represents the difference between the "push" of the origin and the "pull" of the destination
+:::
+
+## Aim 2: Models
+
+Baseline Model:
+
+$$  y_{it} = \beta_0 + \beta_{1t} + \beta_{2}y_{t-1,i} + \mu_{i} + \epsilon_{it}    $$
+
+::: incremental
+-   where $\beta_0$ is the intercept,
+
+-   $\beta_{1t}$ is a coefficient for the effect of each year $t$
+
+-   $\beta_2$ is a coefficient to capture the effect of lagged premature age-adjusted mortality,
+
+-   $\mu_i$ is a random intercept for each county $i$
+
+-   and $\epsilon_{it}$ represents spatial error as defined on the next slide....
+:::
+
+## Aim 2: Models
+
+Baseline Model: **Spatial error**
+
+$$ \epsilon_{it} = \lambda W \epsilon_{it} + u_{it}   $$
+
+::: incremental
+-   Where $\lambda$ is a scalar to represent the magnitude of spatial dependency
+
+-   $W_{ij}$ is an entry in a spatial weights matrix with row-standardized weights. It was created using the "queen" criterion which considers counties that share any point as neighbors.
+
+-   $\mu_{it}$ represents the independent random error term for each county and each year.
+:::
+
+## Aim 2: Models
+
+Iterative process:
+
+::: incremental
+1.  Test splines for $y_{i,t-1}$
+2.  Test $mig_{it}$ with and without splines (*Hypothesis 2A*)
+3.  Test interaction between $mig_{it}$ and urbanicity (*Hypothesis 2B*)
+4.  Replace $mig_{it}$ with $amig_{it}$ and test values of $d_{ij}$ incrementing by 50 from -200 to 200 in units of premature deaths per 100,000 population (*Hypothesis 2C*)
+5.  Test values of $d_{ij}$ dependent upon the urbanicity category of origin county $j$ and destination county $i$ such that $d_{ij}$ could be one of four values: $d_{uu}$ (urban to urban), $d_{rr}$ (rural to rural), $d_{ru}$ (rural to urban), and $d_{ur}$ (urban to rural) where each of $(d_{uu}, d_{rr}, d_{ru}, d_{ur})$ were varied, factorially, incrementing first by 50 from -200 to 200 and then by 20 from -80 to 80 such that 13,122 $(= 9^4 * 2)$ total combinations were tested.
+:::
+
+::: notes
+dij = d(destination, origin)
+:::
+
+## Aim 2: Results
+
+**Hypothesis 2A:** Does the migration term add explainability to the baseline model?
+
+YES - models including the $mig_{it}$ term had lower BIC scores than models without.
+
+## Aim 2: Results
+
+**Hypothesis 2B:** Does the role of $mig_{it}$ differ between rural and urban counties?
+
+YES - $mig_{it}$ significantly enhances model explainability when accounting for urbanicity
+
+## Aim 2: Results
+
+![](images/aim2_BICplot.png)
+
+## Aim 2: Results
+
+**Hypothesis 2C:** Can we account for unmeasured factors related to health and migration?
+
+Health-related selection may not be important to modeling county-level health. BIC score is minimized when $d_{ij} = 0$.
+
+![](images/aim2_BIC_nourb.png)
+
+## Aim 2: Results
+
+**Hypothesis 2C:** Can we account for unmeasured factors related to health and migration when accounting for urbanicity?
+
+Health-related selection may be important to modeling county-level health when we account for urbanicity. BIC score is minimized when $(d_{uu} = -100, d_{rr} = 0, d_{ru} = 0, d_{ur} = 20)$.
+
+![](images/aim2_bic_withurb.png)
+
+::: notes
+For migration to rural counties (orange and red lines), min BIC score occurs when the model assumes these counties attract individual with average county health (ie when d = 0)
+
+For urban-to-urban migration, lower BIC occurs when the model assumes the urban counties attract inds w lower mortality rates, suggesting that movers tend to migrate from healthier urban counties to less healthy urban counties. OR that movers are healthier on average than their destination counties.
+
+For rural to urban migration, rural origins have higher mortality rates compared to their urban destinations since min occurs at dur = 20 ; however the relationship between due and BIC is relatively flat, with all BIC scores close to the min -\> limited evidence of health-related selection from rural origins to urban destinations
+
+REMEMBER: dur = d urban dest, rural origin
+:::
+
+## Aim 2: Pitfalls and Alternatives
+
+::: incremental
+-   Regression to the mean
+
+-   Internal migration only
+
+-   IRS data issues; only approximately 45% of the total US population, not including individuals who are undocumented
+
+-   Pre-covid
+:::
+
+## Aim 3: Hypothesis
+
+Is a county's position within a migration system predictive of county-level health?
+
+## Aim 3: Approach 
+
+**Tensor decomposition**
+
+![Figure by Fan Guo http://dx.doi.org/10.1504/IJWET.2012.050958](images/cpdecomp.jpg)
+
+::: notes
+lots of ways to visualize this
+
+cake metaphor????
+:::
+
+## Aim 3: Approach
+
+**Tensor Decomposition**
+
+Non-Negative Tensor Factorization (NTF) represented as: $$𝑋≈ \sum_{r=1}^R{o_{ir}\bullet d_{jr}\bullet t_{kr}}$$
+
+Where each $rth$ component corresponds to a unique "migration system", and the loadings $(o_{ir}, d_{jr}, t_{kr})$ represent the significance of each origin county $i$, destination county $j$, and year $k$ to each migration system $r$.
+
+## Aim 3: Approach
+
+**Constructing the tensor** $X$
+
+A CUBE! Origin, destination, time
+
+Each entry in the tensor represents the $log(1+n)$ transformed number of migrating individuals from origin $i$ to destination $j$ in time period $k$.
+
+## Aim 3: Approach
+
+**Spatial modeling**
+
+::: incremental
+-   Predictor variables: $o_{ir}, d_{jr}, t_{kr}$
+
+    -   Loadings from the tensor decomposition corresponding to origin, destination, and time
+
+-   Outcome variable: $y_{it}$
+
+    -   Premature age-adjusted mortality rate per 100,000 population
+
+-   Modifier: $Urbanicity_n$
+
+    -   Six categories (same as Aim 1): large central metro, large fringe metro, medium metro, small metro, micropolitan, noncore
+
+-   Spatial error: $u_{it}$
+
+    -   Accounts for spatial correlation using Queen's contiguity
+:::
+
+$$ y_{it} = \beta_0 + \sum_{r=1}^{R} \beta_{o_r} o_{ir} + \sum_{r=1}^{R} \beta_{d_r} d_{jr} + \sum_{r=1}^{R} \beta_{t_r} t_{kr} + \sum_{n=2}^{6} \gamma_n \text{Urbanicity}_n + \mu_{it} $$
+
+## Aim 3: Results
+
+**Component Selection**
+
+![](images/aim3_elbow.png)
+
+::: notes
+We tested many different random seeds for each component, and we tested iteration counts of 100, 500, and 1000
+:::
+
+## Aim 3: Three migration systems
+
+**System 1: Urban to rural**
+
+![](aim2_images/comp1_maps.png)
+
+## Aim 3: Three migration systems
+
+**System 1: Urban to rural**
+
+![](images/aim3_top_comp1.png)
+
+::: notes
+few origins, well distributed destinations
+
+Cook county really lights up - this could be for a variety of reasons
+
+Majority of destination counties are noncore (most rural)
+:::
+
+## Aim 3: Three migration systems
+
+**System 2: Specific phenomena**
+
+![](aim2_images/comp2_maps.png)
+
+## Aim 3: Three migration systems
+
+**System 2: Specific phenomena**
+
+![](images/aim3_top_comp2.png)
+
+::: notes
+Better distribution of origins than comp 1, but still not as well dist as the destinations
+
+Genesse MI is the site of the 2014 flint water crisis ; survey data has not decisively shown that people moved as a result of the water crisis, but many residents reported considering moving.... [@morckel2018]
+
+Top destination is Lincoln arkansas which is home to two prisons????
+:::
+
+## Aim 3: Three migration systems
+
+**System 3: State borders**
+
+![](aim2_images/comp3_maps.png)
+
+## Aim 3: Three migration systems
+
+**System 3: State borders**
+
+![](images/aim3_top_comp3.png)
+
+::: notes
+Lyon county iowa: on the border of Minnesota and South Dakota
+
+4/10 of the top origins are on state borders: Le Flore Oklahoma, Escambia Alabama, Santa Rosa Florida
+
+Tax data  - cohen et al suggests that people do file in different states as a result of variations in tax code
+:::
+
+## Aim 3: Three migration systems
+
+**Temporal trends**
+
+![](images/aim3_temporal.png)
+
+::: notes
+2013: ACA roll out; TX, MS, AL, GA, FL, SC, TN, WY, WI, KS did not expand medicaid but 37 other states did
+
+diff in diff study using ACS migration data found that the ACA was not assoc w significant migration [@goodman2017]
+
+2018: tax cuts and jobs act TCJA
+
+diff in diff thesis found sig negative impacts on migration to high tax states [@simonson2022] this study also used ACS data
+
+PURELY SPECULATIVE ; cannot form any conclusions based on this
+:::
+
+## Aim 3: Results
+
+**Connection to county-level health**
+
+$$ y_{it} = \beta_0 + \sum_{r=1}^{3} \beta_{o_r} o_{ir} + \sum_{r=1}^{3} \beta_{d_r} d_{jr} + \sum_{r=1}^{3} \beta_{t_r} t_{kr} + \sum_{n=2}^{6} \gamma_n \text{Urbanicity}_n + \mu_{it} $$
+
+::: incremental
+-   Increased origin loadings in *Component 2: Specific phenomena* $(o_{i2})$ are associated with higher premature mortality rates
+
+-   Increased destination loadings in *Component 1: Urban-to-rural* $(d_{i1})$ and *Component 3: State borders* $(d_{i3})$ are associated with lower premature mortality rates
+
+-   Even after accounting for a county's position within a migration system, the effect of urbanicity remains significant
+
+    -   Urbanicity gradient: effect of urbanicity increases as counties become more rural (i.e. as $n$ increases)
+:::
+
+## Aim 3: Pitfalls and Alternatives
+
+::: incremental
+-   Instability of estimates
+
+-   IRS data
+
+-   County-level internal migration
+
+-   Other, less complicated and more stable methods
+:::
+
+::: notes
+Tensor decomposition is a nonconvex problem meaning that there are many possible solutions - the best way I've heard this described is like a forest
+
+Other methods:
+
+PCA ; not as structured; harder to interpret ; often 2d
+
+ensemble decomposition: aggregates results from multiple runs to provide a more stable solution ; then uses correlation or "permutation alignment" to id components that appear consistently across decomps
+
+consensus clustering: consensus matrix is a square matrix where each entry represents the freq or proportion of times two data points are clustered together (ie part of the decomp??) across all runs ; ie if 2pts are in the same decomp 80% of the runs, the consensus matrix entry for those pts is 0.8
+
+gini coeff as originally proposed in 2022 would allow us to compare across components ; but ranking allows us to ID counties that are the largest migration contributors but no insight into balance or spread of contributors
+:::
+
+## Future Questions
+
+::: incremental
+-   Can we replicate these findings using the ACS five year data?
+
+-   Need for smaller unit of analysis (census tract? mobile device?) and more inclusive data
+
+-   What will happen to places that experience forced or voluntary exodus of undocumented immigrants?
+
+-   Increased need for place-based assessments of health to quantify potential impacts of Project 25
+:::
+
+::: notes
+Unauthorized immigrants represented 3.3% of the total US population as of 2022 [@krogstad2024]
+
+we could see increases in differences across states in terms of health policy - we will need to have clear understandings of who and what is being measured in order to advocate for evidence based policy
+:::
+
+## Acknowledgements
+
+::: incremental
+-   CHRR folks
+
+-   Mom, Dad, Erik, Andrew
+
+-   Friends
+
+-   Lesotho folks: Palesa and Naledi, Grant and Emily, Themba, Mathabo
+:::
+
+## Extras
+
+## Aims visual:
+
+![](images/framework.png){fig-align="center"}
+
 ## Aim 2: Data
 
 All analyses are from the perspective of a destination county of migration. Counties are included in our analyses if they:
@@ -199,41 +587,7 @@ All analyses are from the perspective of a destination county of migration. Coun
 -   Used years 2011 to 2019 (9 years total)
 :::
 
-## Aim 2: Variables
-
-**Outcome:** County-level age-adjusted premature (before age 75) mortality rates from CDC WONDER for 2011 through 2019
-
-We refer to the county-level age-adjusted premature mortality rate of county $i$ at time $t$ as $y_{it}$.
-
-## Aim 2: Variables
-
-**Baseline explanatory factor:** lagged county-level age-adjusted premature mortality
-
-We refer to the county-level age-adjusted premature mortality rate of county $i$ at time $t-1$ (i.e. the prior year) as $y_{i,t-1}$
-
-## Aim 2: Variables
-
-**Primary explanatory factor:** weighted average migration term, denoted $mig_{it}$ for destination county $i$ in year $t$. This term accounts for compositional change in a county as individuals move into a county. It is essentially a weighted average of the lagged mortality rates from all origin counties.
-
-$$ mig_{it} = \frac{ \sum_{j\ne i} out_{jit} y_{j,t-1} + y_{i,t-1} (pop_{i, t-1} - \sum_{j\ne i} out_{ijt})}{ \sum_{j\ne i} out_{jit} + (pop_{i,t-1} - \sum_{j\ne i} out_{ijt})} $$
-
-::: incremental
--   $y_{i, t-1}$ is the lagged premature age-adjusted mortality rate of county $i$
-
--   $pop_{i,t-1}$ is the population under age 75 of county $i$ in the prior year $t-1$
-
--   $out_{ijt}$ represents the number of individuals from county $j$ who moved to a destination county $i$ between year $t-1$ and year $t$
-:::
-
-## Aim 2: Variables
-
-**Secondary explanatory factor:** urbanicity as defined by the NCHS (same as Aim 1), grouped into urban and rural
-
-n = 1948 rural counties
-
-n = 1159 urban counties
-
-## Aim 2: Variables
+## Aim 2: Variables - derivation of $d_{ij}$
 
 **Exploratory explanatory factor:** adjusted migration term, denoted $amig_{it}$ for county $i$ in year $t$ with new parameters $k_{ij}$ and $l_i$ for each origin-destination pair.
 
@@ -263,250 +617,8 @@ $$  amig_{it} = \frac{ \sum_{j\ne i} out_{jit} ( y_{j,t-1} + l_i + d_{ij}) + (y_
 
 $$  amig_{it} = \frac{ \sum_{j\ne i} out_{jit} ( y_{j,t-1} + d_{ij}) + y_{i,t-1} (pop_{i, t-1} - \sum_{j\ne i} out_{ijt})}{ \sum_{j\ne i} out_{jit} + (pop_{i,t-1} - \sum_{j\ne i} out_{ijt})} +l_i$$
 
-## Aim 2: Variables
-
-**Exploratory explanatory factor:** adjusted migration term, denoted $amig_{it}$ for county $i$ in year $t$
-
-$$  amig_{it} = \frac{ \sum_{j\ne i} out_{jit} ( y_{j,t-1} + d_{ij}) + y_{i,t-1} (pop_{i, t-1} - \sum_{j\ne i} out_{ijt})}{ \sum_{j\ne i} out_{jit} + (pop_{i,t-1} - \sum_{j\ne i} out_{ijt})}$$
-
-::: incremental
--   Where $d_{ij}$ accounts for health-related selection of migrants to county $i$ from county $j$.
-
--   When $d_{ij} > 0$, county $i$ tends to attract less healthy individuals
-
--   When $d_{ij} < 0$ county $i$ tends to attract healthier individuals
-:::
-
-## Aim 2: Models
-
-Baseline Model:
-
-$$  y_{it} = \beta_0 + \beta_{1t} + \beta_{2}y_{t-1,i} + \mu_{i} + \epsilon_{it}    $$
-
-::: incremental
--   where $\beta_0$ is the intercept,
-
--   $\beta_{1t}$ is a coefficient for the effect of each year $t$
-
--   $\beta_2$ is a coefficient to capture the effect of lagged premature age-adjusted mortality,
-
--   $\mu_i$ is a random intercept for each county $i$
-
--   and $\epsilon_{it}$ represents an error term
-:::
-
-## Aim 2: Models
-
-Baseline Model:
-
-Spatial error:
-
-$$ \epsilon_{it} = \lambda W \epsilon_{it} + u_{it}   $$
-
-::: incremental
--   Where $\lambda$ is a scalar to represent the magnitude of spatial dependency
-
--   $W_{ij}$ is an entry in a spatial weights matrix with row-standardized weights. It was created using the "queen" criterion from the *spdep* R package [@spdep-2], which considers counties that share any point as neighbors.
-
--   $\mu_{it}$ represents the independent random error term for each county and each year.
-:::
-
-## Aim 2: Models
-
-Iterative process:
-
-::: incremental
-1.  Added splines for $y_{i,t-1}$
-
-2.  Added $mig_{it}$ with and without splines (Hypothesis 1)
-
-3.  Added interaction between $mig_{it}$ and urbanicity (Hypothesis 2)
-
-4.  Replaced $mig_{it}$ with $amig_{it}$ and tested values of $d_{ij}$ incrementing by 50 from -200 to 200 in units of premature deaths per 100,000 population
-
-5.  Tested values of $d_{ij}$ dependent upon the urbanicity category of origin county $j$ and destination county $i$ such that $d_{ij}$ could be one of four values: $d_{uu}$ (urban to urban), $d_{rr}$ (rural to rural), $d_{ru}$ (rural to urban), and $d_{ur}$ (urban to rural) where each of $(d_{uu}, d_{rr}, d_{ru}, d_{ur})$ were varied, factorially, incrementing first by 50 from -200 to 200 and then by 20 from -80 to 80 such that 13,122 $(= 9^4 * 2)$ total combinations were tested.
-:::
-
-## Aim 2: Results
-
-**Hypothesis 1:** Does the migration term add explainability to the baseline model?
-
-YES - models including the $mig_{it}$ term had lower BIC scores than models without.
-
-## Aim 2: Results
-
-**Hypothesis 2:** Does the role of $mig_{it}$ differ between rural and urban counties?
-
-YES - $mig_{it}$ significantly enhances model explainability when accounting for urbanicity
-
-## Aim 2: Results
-
-![](images/aim2_BICplot.png)
-
-## Aim 2: Results
-
-**Hypothesis 3:** How can we account for unmeasured factors?
-
-Health-related selection may not be important to modeling county-level health. BIC score is minimized when $d_{ij} = 0$.
-
-![](images/aim2_BIC_nourb.png)
-
-## Aim 2: Results
-
-**Hypothesis 3:** How can we account for unmeasured factors?
-
-Health-related selection may be important to modeling county-level health when we account for urbanicity. BIC score is minimized when $(d_{uu} = -100, d_{rr} = 0, d_{ru} = 0, d_{ur} = 20)$.
-
-![](images/aim2_bic_withurb.png)
-
-::: notes
-For migration to rural counties, min BIC score occurs when the model assumes these counties attract individual with average county health (ie when d = 0)
-
-For urban-to-urban migration, lower BIC occurs when the model assumes the urban counties attract inds w lower mortality rates, suggesting that movers tend to migrate from healthier urban counties to less healthy urban counties.
-
-For rural to urban migration, rural origins have higher mortality rates compared to their urban destinations since min occurs at dur = 20 ; however the relationship between due and BIC is relatively flat, with all BIC scores close to the min -\> limited evidence of health-related selection from rural origins to urban destinations
-:::
-
-## Aim 2: Pitfalls and Alternatives
-
-::: incremental
--   Regression to the mean
-
--   Internal migration only
-
--   IRS data issues ; only approximately 45% of the total US population, not including individuals who are undocumented
-
--   Pre-covid
-:::
-
-## Aim 3: Hypotheses
-
-Is position within a migration system predictive of county-level health?
-
-## Aim 3: Data
-
-Outcome: county-level age-adjusted rates of premature mortality
-
-Predictor: tensor decomposition loadings assessed from a
-
-## Aim 3: Approach
-
-**Constructing the tensor**
-
-A CUBE! Origin, destination, time
-
-Each entry in the tensor represents the $log(1+n)$ transformed number of migrating individuals from origin $i$ to destination $j$ in time period $k$.
-
-## Aim 3: Approach
-
-**Tensor Decomposition**
-
-Non-Negative Tensor Factorization (NTF) from the `nnTensor` R package. Represented as: $$𝑋≈ \sum_{r=1}^R{o_{ir}\bullet d_{jr}\bullet t_{kr}}$$ Where each $rth$ component corresponds to a unique "migration system", and the loadings $(o_{ir}, d_{jr}, t_{kr})$ represent the significance of each origin county $i$, destination county $j$, and year $k$ to each migration system $r$.
-
-## Aim 3: Approach
-
-**Spatial modeling**
-
-::: incremental
--   Predictor variables: $o_{ir}, d_{jr}, t_{kr}$
-
-    -   Loadings from the tensor decomposition corresponding to origin, destination, and time
-
--   Outcome variable: $y_{it}$
-
-    -   Premature age-adjusted mortality rate
-
--   Modifier: $Urbanicity_n$
-
-    -   Six categories (same as Aim 1): large central metro, large fringe metro, medium metro, small metro, micropolitan, noncore
-:::
-
-$$ y_{it} = \beta_0 + \sum_{r=1}^{R} \beta_{o_r} o_{ir} + \sum_{r=1}^{R} \beta_{d_r} d_{jr} + \sum_{r=1}^{R} \beta_{t_r} t_{kr} + \sum_{n=2}^{6} \gamma_n \text{Urbanicity}_n + \mu_{it} $$
-
-## Aim 3: Results
-
-**Component Selection**
-
-![](images/aim3_elbow.png)
-
-::: notes
-We tested many different random seeds for each component, and we tested iteration counts of 100, 500, and 1000
-:::
-
-## Aim 3: Three migration systems
-
-**System 1: Urban to rural**
-
-![](aim2_images/comp1_maps.png)
-
-## Aim 3: Three migration systems
-
-**System 1: Urban to rural**
-
-![](images/aim3_top_comp1.png)
-
-## Aim 3: Three migration systems
-
-**System 2: Specific phenomena**
-
-![](aim2_images/comp2_maps.png)
-
-## Aim 3: Three migration systems
-
-**System 2: Specific phenomena**
-
-![](images/aim3_top_comp2.png)
-
-## Aim 3: Three migration systems
-
-**System 3: State borders**
-
-![](aim2_images/comp3_maps.png)
-
-## Aim 3: Three migration systems
-
-**System 3: State borders**
-
-![](images/aim3_top_comp3.png)
-
-## Aim 3: Three migration systems
-
-**Temporal trends**
-
-![](images/aim3_temporal.png)
-
 ## Aim 3: Results
 
 **Connection to county-level health**
 
 ##### ![](images/aim3_spatialtable.png)
-
-## Aim 3: Pitfalls and Alternatives
-
-::: incremental
--   Tensor decomposition is a non-convex problem
-
--   IRS data
-
--   County-level internal migration
-:::
-
-## Future Questions 
-
-::: incremental
--   Need for smaller unit of analysis (census tract? mobile device?) and more inclusive data
-
--   Can we replicate these findings using the ACS five year data?
-:::
-
-## Acknowledgements 
-
-::: incremental
--   CHRR folks
-
--   Mom, Dad, Andrew
-
--   Friends
-
--   Lesotho folks: Palesa and Naledi, Grant and Emily, Themba, Mathabo
-:::
