--- a/references.bib
+++ b/references.bib
@@ -3035,3 +3035,19 @@ PMID: 9202502},
 	author = {Foster, Thomas B and Ellis, Mark and Fiorio, Lee},
 	langid = {en}
 }
+
+@article{botea,
+	title = {Female Migration in Lesotho: Determinants and Opportunities},
+	author = {Botea, Ioana Alexandra and Compernolle, Nell and Chakravarty, Shubha},
+	langid = {en}
+}
+
+@misc{krogstad2024,
+	title = {What we know about unauthorized immigrants living in the U.S.},
+	author = {Krogstad, Jeffrey S. Passel and Jens Manuel},
+	year = {2024},
+	month = {07},
+	date = {2024-07-22},
+	url = {https://www.pewresearch.org/short-reads/2024/07/22/what-we-know-about-unauthorized-immigrants-living-in-the-us/},
+	langid = {canadian}
+}
